--- a/src/pages/docs/guides/nextjs.mdx
+++ b/src/pages/docs/guides/nextjs.mdx
@@ -48,6 +48,7 @@ If you aren't planning to write any custom CSS in your project, the fastest way 
 If you aren't planning to use them, you can safely delete any CSS files Next.js creates for you by default like `globals.css` and `Home.module.css`. Make sure you delete any references to them within your components as well.
 
 ```preval include
+level: 4
 file: ./styles/global.css 
 ```
 
