--- a/src/pages/docs/guides/create-react-app.mdx
+++ b/src/pages/docs/guides/create-react-app.mdx
@@ -61,6 +61,9 @@ module.exports = {
 If you're planning to use any other PostCSS plugins, you should read our documentation on [using PostCSS as your preprocessor](/docs/using-with-preprocessors) for more details about the best way to order them alongside Tailwind.
 
 ```preval configuration
+postcss: false
+types:
+  - components
 purge: 
   - ./src/**/*.js
   - ./public/index.html
