remove the prefix

--- a/src/pages/docs/guides/laravel.mdx
+++ b/src/pages/docs/guides/laravel.mdx
@@ -7,8 +7,7 @@ tool: Laravel Mix
 ```preval installation
 tool: Laravel
 reference:
-  prefix: the
-  name: Laravel Installer 
+  name: the Laravel Installer 
   link: https://laravel.com/docs/8.x#via-laravel-installer
 script: laravel new
 npmInstall: true
