Add border variant to checked example
In the example for the checkbox background- and border color are used.
However, only the background color variant is extended. So if you copy the example checkbox input and the config, the transparent border won't work.

--- a/src/pages/docs/hover-focus-and-other-states.mdx
+++ b/src/pages/docs/hover-focus-and-other-states.mdx
@@ -536,6 +536,7 @@ module.exports = {
   variants: {
     extend: {
       backgroundColor: ['checked'],
+      borderColor: ['checked'],
     }
   },
 }
