Remove backticks in heading

--- a/src/pages/docs/upgrading-to-v2.mdx
+++ b/src/pages/docs/upgrading-to-v2.mdx
@@ -107,7 +107,7 @@ The `clearfix` class has been removed since `flow-root` is a simpler solution to
   </div>
 ```
 
-## Update font-weight class names for `100` and `200` weights
+## Update font-weight class names for 100 and 200 weights
 
 The class names for the `100` and `200` font weights have changed in Tailwind CSS v2.0:
 
