Fix broken heading anchor in dark mode docs page (#684)

--- a/src/pages/docs/dark-mode.mdx
+++ b/src/pages/docs/dark-mode.mdx
@@ -3,6 +3,8 @@ title: Dark Mode
 description: Using Tailwind CSS to style your site in dark mode.
 ---
 
+import { Heading } from '@/components/Heading'
+
 ## <Heading hidden>Basic usage</Heading>
 
 Now that dark mode is a first-class feature of many operating systems, it's becoming more and more common to design a dark version of your website to go along with the default design.
