Update HTML comment in 'flex-none' example block (#686)

--- a/src/pages/docs/flex.mdx
+++ b/src/pages/docs/flex.mdx
@@ -173,7 +173,7 @@ Use `flex-none` to prevent a flex item from growing or shrinking:
     <!-- Will grow and shrink as needed -->
   </div>
   <div class="**flex-none** ...">
-    <!-- Will grow and shrink as needed taking initial size into account -->
+    <!-- Will not grow or shrink -->
   </div>
   <div class="flex-1 ...">
     <!-- Will grow and shrink as needed -->
