fixing outdated documentation about inset plugin + standardising the "By default, Tailwind" copy with a comma (#688)
* fix outdated documentation about inset plugin
* standardise the "By default, Tailwind" copy with a comma

--- a/src/pages/docs/animation.mdx
+++ b/src/pages/docs/animation.mdx
@@ -257,7 +257,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 Animations by their very nature tend to be highly project-specific. **The animations we include by default are best thought of as helpful examples**, and you're encouraged to customize your animations to better suit your needs.
 
-By default Tailwind provides utilities for four different example animations, as well as the `animate-none` utility. You change, add, or remove these by customizing the `animation` section of your theme configuration.
+By default, Tailwind provides utilities for four different example animations, as well as the `animate-none` utility. You change, add, or remove these by customizing the `animation` section of your theme configuration.
 
 ```diff-js
   // tailwind.config.js
