--- a/src/pages/docs/background-color.mdx
+++ b/src/pages/docs/background-color.mdx
@@ -125,7 +125,7 @@ Focus utilities can also be combined with responsive utilities by adding the res
 
 ### Background Colors
 
-By default Tailwind makes the entire [default color palette](/docs/customizing-colors#default-color-palette) available as background colors.
+By default, Tailwind makes the entire [default color palette](/docs/customizing-colors#default-color-palette) available as background colors.
 
 You can [customize your color palette](/docs/colors#customizing) by editing the `theme.colors` variable in your `tailwind.config.js` file, or customize just your background colors using the `theme.backgroundColor` section of your Tailwind config.
 
