--- a/src/pages/docs/background-image.mdx
+++ b/src/pages/docs/background-image.mdx
@@ -36,7 +36,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Background Images
 
-By default Tailwind includes background image utilities for creating linear gradient backgrounds in eight directions.
+By default, Tailwind includes background image utilities for creating linear gradient backgrounds in eight directions.
 
 You can add your own background images by editing the `theme.backgroundImage` section of your `tailwind.config.js` file:
 
