--- a/src/pages/docs/border-color.mdx
+++ b/src/pages/docs/border-color.mdx
@@ -129,7 +129,7 @@ Focus utilities can also be combined with responsive utilities by adding the res
 
 ### Border Colors
 
-By default Tailwind makes the entire [default color palette](/docs/customizing-colors#default-color-palette) available as border colors.
+By default, Tailwind makes the entire [default color palette](/docs/customizing-colors#default-color-palette) available as border colors.
 
 You can [customize your color palette](/docs/colors#customizing) by editing the `theme.colors` section of your `tailwind.config.js` file, or customize just your border colors using the `theme.borderColor` section.
 
