--- a/src/pages/docs/border-radius.mdx
+++ b/src/pages/docs/border-radius.mdx
@@ -122,7 +122,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Border Radiuses
 
-By default Tailwind provides five border radius size utilities. You can change, add, or remove these by editing the `theme.borderRadius` section of your Tailwind config.
+By default, Tailwind provides five border radius size utilities. You can change, add, or remove these by editing the `theme.borderRadius` section of your Tailwind config.
 
 ```diff-js
   // tailwind.config.js
