--- a/src/pages/docs/divide-color.mdx
+++ b/src/pages/docs/divide-color.mdx
@@ -96,7 +96,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Border Colors
 
-By default Tailwind makes the entire [default color palette](/docs/customizing-colors#default-color-palette) available as divide colors.
+By default, Tailwind makes the entire [default color palette](/docs/customizing-colors#default-color-palette) available as divide colors.
 
 You can [customize your color palette](/docs/colors#customizing) by editing the `theme.colors` section of your `tailwind.config.js` file, customize just your border and divide colors together using the `theme.borderColor` section, or customize only the divide colors using the `theme.divideColor` section.
 
