--- a/src/pages/docs/flex-grow.mdx
+++ b/src/pages/docs/flex-grow.mdx
@@ -98,7 +98,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Grow Values
 
-By default Tailwind provides two `flex-grow` utilities. You change, add, or remove these by editing the `theme.flexGrow` section of your Tailwind config.
+By default, Tailwind provides two `flex-grow` utilities. You change, add, or remove these by editing the `theme.flexGrow` section of your Tailwind config.
 
 ```diff-js
   // tailwind.config.js
