--- a/src/pages/docs/flex.mdx
+++ b/src/pages/docs/flex.mdx
@@ -201,7 +201,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Flex Values
 
-By default Tailwind provides four `flex` utilities. You change, add, or remove these by editing the `theme.flex` section of your Tailwind config.
+By default, Tailwind provides four `flex` utilities. You change, add, or remove these by editing the `theme.flex` section of your Tailwind config.
 
 ```diff-js
   // tailwind.config.js
