--- a/src/pages/docs/font-size.mdx
+++ b/src/pages/docs/font-size.mdx
@@ -106,7 +106,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Font Sizes
 
-By default Tailwind provides 10 `font-size` utilities. You change, add, or remove these by editing the `theme.fontSize` section of your Tailwind config.
+By default, Tailwind provides 10 `font-size` utilities. You change, add, or remove these by editing the `theme.fontSize` section of your Tailwind config.
 
 ```diff-js
   // tailwind.config.js
