--- a/src/pages/docs/font-weight.mdx
+++ b/src/pages/docs/font-weight.mdx
@@ -85,7 +85,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Font Weights
 
-By default Tailwind provides 10 `font-weight` utilities. You change, add, or remove these by editing the `theme.fontWeight` section of your Tailwind config.
+By default, Tailwind provides 10 `font-weight` utilities. You change, add, or remove these by editing the `theme.fontWeight` section of your Tailwind config.
 
 ```diff-js
   // tailwind.config.js
