--- a/src/pages/docs/gap.mdx
+++ b/src/pages/docs/gap.mdx
@@ -83,7 +83,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
-By default Tailwind's gap scale matches your configured [spacing scale](/docs/customizing-spacing).
+By default, Tailwind's gap scale matches your configured [spacing scale](/docs/customizing-spacing).
 
 You can customize the global spacing scale in the `theme.spacing` or `theme.extend.spacing` sections of your `tailwind.config.js` file:
 
