--- a/src/pages/docs/letter-spacing.mdx
+++ b/src/pages/docs/letter-spacing.mdx
@@ -68,7 +68,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Letter Spacings
 
-By default Tailwind provides six tracking utilities. You can change, add, or remove these by editing the `theme.letterSpacing` section of your Tailwind config.
+By default, Tailwind provides six tracking utilities. You can change, add, or remove these by editing the `theme.letterSpacing` section of your Tailwind config.
 
 ```diff-js
   // tailwind.config.js
