--- a/src/pages/docs/margin.mdx
+++ b/src/pages/docs/margin.mdx
@@ -140,7 +140,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Margin scale
 
-By default Tailwind provides 20 margin utilities for each side and axis.
+By default, Tailwind provides 20 margin utilities for each side and axis.
 
 If you'd like to customize these values for padding, margin, width, and height all at once, use the `theme.spacing` section of your `tailwind.config.js` file.
 
