--- a/src/pages/docs/outline.mdx
+++ b/src/pages/docs/outline.mdx
@@ -57,7 +57,7 @@ Use the `outline-white` and `outline-black` utilities to add a 2px dotted border
 
 ### Outlines
 
-By default Tailwind provides three outline utilities. You can customize these by editing the `theme.outline` section of your `tailwind.config.js` file.
+By default, Tailwind provides three outline utilities. You can customize these by editing the `theme.outline` section of your `tailwind.config.js` file.
 
 ```js
   // tailwind.config.js
