--- a/src/pages/docs/placeholder-color.mdx
+++ b/src/pages/docs/placeholder-color.mdx
@@ -110,7 +110,7 @@ Focus utilities can also be combined with responsive utilities by adding the res
 
 ### Placeholder Colors
 
-By default Tailwind makes the entire [default color palette](/docs/customizing-colors#default-color-palette) available as placeholder colors.
+By default, Tailwind makes the entire [default color palette](/docs/customizing-colors#default-color-palette) available as placeholder colors.
 
 You can [customize your color palette](/docs/colors#customizing) by editing `theme.colors` in your `tailwind.config.js` file, or customize just your placeholder colors in the `theme.textColor` section.
 
