--- a/src/pages/docs/rotate.mdx
+++ b/src/pages/docs/rotate.mdx
@@ -53,7 +53,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Rotate scale
 
-By default Tailwind provides seven general purpose rotate utilities. You change, add, or remove these by editing the `theme.rotate` section of your Tailwind config.
+By default, Tailwind provides seven general purpose rotate utilities. You change, add, or remove these by editing the `theme.rotate` section of your Tailwind config.
 
 ```diff-js
   // tailwind.config.js
