--- a/src/pages/docs/scale.mdx
+++ b/src/pages/docs/scale.mdx
@@ -53,7 +53,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Scale values
 
-By default Tailwind provides ten general purpose scale utilities. You change, add, or remove these by editing the `theme.scale` section of your Tailwind config.
+By default, Tailwind provides ten general purpose scale utilities. You change, add, or remove these by editing the `theme.scale` section of your Tailwind config.
 
 ```diff-js
   // tailwind.config.js
