--- a/src/pages/docs/text-color.mdx
+++ b/src/pages/docs/text-color.mdx
@@ -125,7 +125,7 @@ Focus utilities can also be combined with responsive utilities by adding the res
 
 ### Text Colors
 
-By default Tailwind makes the entire [default color palette](/docs/customizing-colors#default-color-palette) available as text colors.
+By default, Tailwind makes the entire [default color palette](/docs/customizing-colors#default-color-palette) available as text colors.
 
 You can [customize your color palette](/docs/colors#customizing) by editing `theme.colors` in your `tailwind.config.js` file, or customize just your text colors in the `theme.textColor` section.
 
