--- a/src/pages/docs/z-index.mdx
+++ b/src/pages/docs/z-index.mdx
@@ -52,7 +52,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Z-Index scale
 
-By default Tailwind provides six numeric `z-index` utilities and an `auto` utility. You change, add, or remove these by editing the `theme.zIndex` section of your Tailwind config.
+By default, Tailwind provides six numeric `z-index` utilities and an `auto` utility. You change, add, or remove these by editing the `theme.zIndex` section of your Tailwind config.
 
 ```diff-js
   // tailwind.config.js
