--- a/src/pages/docs/background-position.mdx
+++ b/src/pages/docs/background-position.mdx
@@ -90,7 +90,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Background Positions
 
-By default Tailwind provides nine `background-position` utilities. You change, add, or remove these by editing the `theme.backgroundPosition` section of your Tailwind config.
+By default, Tailwind provides nine `background-position` utilities. You change, add, or remove these by editing the `theme.backgroundPosition` section of your Tailwind config.
 
 ```diff-js
   // tailwind.config.js
