--- a/src/pages/docs/flex-shrink.mdx
+++ b/src/pages/docs/flex-shrink.mdx
@@ -98,7 +98,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Shrink Values
 
-By default Tailwind provides two `flex-shrink` utilities. You change, add, or remove these by editing the `theme.flexShrink` section of your Tailwind config.
+By default, Tailwind provides two `flex-shrink` utilities. You change, add, or remove these by editing the `theme.flexShrink` section of your Tailwind config.
 
 ```diff-js
   // tailwind.config.js
