--- a/src/pages/docs/gradient-color-stops.mdx
+++ b/src/pages/docs/gradient-color-stops.mdx
@@ -142,7 +142,7 @@ Focus utilities can also be combined with responsive utilities by adding the res
 
 ### Background Colors
 
-By default Tailwind makes the entire [default color palette](/docs/customizing-colors#default-color-palette) available as gradient color stops.
+By default, Tailwind makes the entire [default color palette](/docs/customizing-colors#default-color-palette) available as gradient color stops.
 
 You can [customize your color palette](/docs/colors#customizing) by editing the `theme.colors` variable in your `tailwind.config.js` file, or customize just your gradient color stop colors using the `theme.gradientColorStops` section of your Tailwind config.
 
