--- a/src/pages/docs/grid-auto-columns.mdx
+++ b/src/pages/docs/grid-auto-columns.mdx
@@ -37,7 +37,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
-By default Tailwind includes four general purpose grid-auto-columns utilities. You can customize these in the `theme.gridAutoColumns` section of your `tailwind.config.js` file.
+By default, Tailwind includes four general purpose grid-auto-columns utilities. You can customize these in the `theme.gridAutoColumns` section of your `tailwind.config.js` file.
 
 ```js
   // tailwind.config.js
