--- a/src/pages/docs/list-style-type.mdx
+++ b/src/pages/docs/list-style-type.mdx
@@ -79,7 +79,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
-By default Tailwind provides three utilities for the most common list style types. You change, add, or remove these by editing the `theme.listStyleType` section of your Tailwind config.
+By default, Tailwind provides three utilities for the most common list style types. You change, add, or remove these by editing the `theme.listStyleType` section of your Tailwind config.
 
 ```diff-js
   // tailwind.config.js
