--- a/src/pages/docs/opacity.mdx
+++ b/src/pages/docs/opacity.mdx
@@ -52,7 +52,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Opacity Scale
 
-By default Tailwind provides five opacity utilities based on a simple numeric scale. You change, add, or remove these by editing the `theme.opacity` section of your Tailwind config.
+By default, Tailwind provides five opacity utilities based on a simple numeric scale. You change, add, or remove these by editing the `theme.opacity` section of your Tailwind config.
 
 ```diff-js
   // tailwind.config.js
