--- a/src/pages/docs/padding.mdx
+++ b/src/pages/docs/padding.mdx
@@ -124,7 +124,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Padding scale
 
-By default Tailwind provides 19 fixed padding utilities for each side and axis.
+By default, Tailwind provides 19 fixed padding utilities for each side and axis.
 
 If you'd like to customize these values for padding, margin, width, and height all at once, use the `theme.spacing` section of your `tailwind.config.js` file.
 
