--- a/src/pages/docs/skew.mdx
+++ b/src/pages/docs/skew.mdx
@@ -53,7 +53,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Skew scale
 
-By default Tailwind provides seven general purpose skew utilities. You change, add, or remove these by customizing the `skew` section of your Tailwind theme config.
+By default, Tailwind provides seven general purpose skew utilities. You change, add, or remove these by customizing the `skew` section of your Tailwind theme config.
 
 ```diff-js
   // tailwind.config.js
