--- a/src/pages/docs/transition-property.mdx
+++ b/src/pages/docs/transition-property.mdx
@@ -61,7 +61,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Property values
 
-By default Tailwind provides transition-property utilities for seven common property combinations. You change, add, or remove these by customizing the `transitionProperty` section of your Tailwind theme config.
+By default, Tailwind provides transition-property utilities for seven common property combinations. You change, add, or remove these by customizing the `transitionProperty` section of your Tailwind theme config.
 
 ```diff-js
   // tailwind.config.js
