--- a/src/pages/docs/transition-timing-function.mdx
+++ b/src/pages/docs/transition-timing-function.mdx
@@ -43,7 +43,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Timing values
 
-By default Tailwind provides four general purpose transition-timing-function utilities. You change, add, or remove these by customizing the `transitionTimingFunction` section of your Tailwind theme config.
+By default, Tailwind provides four general purpose transition-timing-function utilities. You change, add, or remove these by customizing the `transitionTimingFunction` section of your Tailwind theme config.
 
 ```diff-js
   // tailwind.config.js
