--- a/src/pages/docs/translate.mdx
+++ b/src/pages/docs/translate.mdx
@@ -53,7 +53,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ### Translate scale
 
-By default Tailwind provides fixed value translate utilities that match our [spacing scale](/docs/customizing-spacing), as well as 50% and 100% variations for translating relative to the element's size.
+By default, Tailwind provides fixed value translate utilities that match our [spacing scale](/docs/customizing-spacing), as well as 50% and 100% variations for translating relative to the element's size.
 
 You can customize the global spacing scale in the `theme.spacing` or `theme.extend.spacing` sections of your `tailwind.config.js` file:
 
