Use default colors in gradient examples (teal -> green, orange -> yellow) (#687)
* Fix: Use green instead of teal and yellow instead of orange in gradient examples

* Switched previews back to extended colors

--- a/src/pages/docs/background-image.mdx
+++ b/src/pages/docs/background-image.mdx
@@ -19,7 +19,7 @@ To give an element a linear gradient background, use one of the `bg-gradient-{di
   <div class="h-24 bg-gradient-to-r from-orange-400 via-red-500 to-pink-500"></div>
 </template>
 
-<div class="**bg-gradient-to-r from-orange-400 via-red-500 to-pink-500** ..."></div>
+<div class="**bg-gradient-to-r from-yellow-400 via-red-500 to-pink-500** ..."></div>
 ```
 
 ## Responsive
