Correct outdated references to config that should use theme

--- a/src/pages/docs/adding-base-styles.mdx
+++ b/src/pages/docs/adding-base-styles.mdx
@@ -87,11 +87,11 @@ const plugin = require('tailwindcss/plugin')
 
 module.exports = {
   plugins: [
-    plugin(function({ addBase, config }) {
+    plugin(function({ addBase, theme }) {
       addBase({
-        'h1': { fontSize: config('theme.fontSize.2xl') },
-        'h2': { fontSize: config('theme.fontSize.xl') },
-        'h3': { fontSize: config('theme.fontSize.lg') },
+        'h1': { fontSize: theme('fontSize.2xl') },
+        'h2': { fontSize: theme('fontSize.xl') },
+        'h3': { fontSize: theme('fontSize.lg') },
       })
     })
   ]
