--- a/src/pages/docs/customizing-colors.mdx
+++ b/src/pages/docs/customizing-colors.mdx
@@ -55,6 +55,10 @@ const colors = require('tailwindcss/colors')
 module.exports = {
   theme: {
     colors: {
+      transparent: 'transparent',
+      current: 'currentColor',
+      black: colors.black,
+      white: colors.white,
       gray: colors.trueGray,
       indigo: colors.indigo,
       red: colors.rose,
@@ -63,6 +67,8 @@ module.exports = {
   }
 }
 ```
+
+Don't forget to include `transparent` and `current` if you'd like those available in your project.
 
 Although each color has a specific name, you're encouraged to alias them however you like in your own projects. We even do this in the default configuration, aliasing `coolGray` to `gray`, `violet` to `purple`, `amber` to `yellow`, and `emerald` to `green`.
 
@@ -79,6 +85,8 @@ You can build a completely custom palette by adding your own color values from s
 module.exports = {
   theme: {
     colors: {
+      transparent: 'transparent',
+      current: 'currentColor',
       blue: {
         light: '#85d7ff',
         DEFAULT: '#1fb6ff',
@@ -223,8 +231,8 @@ module.exports = {
     colors: {
       transparent: 'transparent',
       current: 'currentColor',
-      black: '#000',
-      white: '#fff',
+      black: colors.black,
+      white: colors.white,
       gray: colors.coolGray,
       red: colors.red,
       yellow: colors.amber,
@@ -325,6 +333,8 @@ module.exports = {
   theme: {
     colors: {
       // Build your palette here
+      transparent: 'transparent',
+      current: 'currentColor',
       gray: colors.trueGray,
       red: colors.red,
       blue: colors.lightBlue,
