Add more examples of regular PurgeCSS options to make it clearer how  works

--- a/src/pages/docs/optimizing-for-production.mdx
+++ b/src/pages/docs/optimizing-for-production.mdx
@@ -232,7 +232,10 @@ module.exports = {
     // These options are passed through directly to PurgeCSS
     options: {
       safelist: ['bg-red-500', 'px-4'],
-    }
+      blockList: [/^debug-/],
+      keyframes: true,
+      fontFace: true,
+    },
   },
   // ...
 }
