--- a/src/pages/docs/optimizing-for-production.mdx
+++ b/src/pages/docs/optimizing-for-production.mdx
@@ -232,7 +232,7 @@ module.exports = {
     // These options are passed through directly to PurgeCSS
     options: {
       safelist: ['bg-red-500', 'px-4'],
-      blockList: [/^debug-/],
+      blocklist: [/^debug-/],
       keyframes: true,
       fontFace: true,
     },
